[gd_scene load_steps=11 format=3 uid="uid://b1408k7y7a2rw"]

[ext_resource type="Script" path="res://scripts/melee_weapon.gd" id="1_nn1ov"]
[ext_resource type="Texture2D" uid="uid://d1slq4w2tuos2" path="res://assets/GUNS_V1.00/V1.00/PNG/[design]_Sniper_rifle_[KAR98]_V1.00.png" id="2_sfh23"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jygr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sfh23")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_oc7wn"]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_aw3kp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_snqyk"]
resource_name = "primary_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(60, 28), Vector2(42, 37), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 3.20966, 4.08407, 1.5708]
}

[sub_resource type="Animation" id="Animation_cw0qp"]
resource_name = "secondary_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(12, -15), Vector2(9.53674e-07, -22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5708, 1.08328, 0.0]
}

[sub_resource type="Animation" id="Animation_1t1fr"]
resource_name = "secondary_attack_charge"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(9.53674e-07, -22), Vector2(9.53674e-07, -25), Vector2(9.53674e-07, -22), Vector2(9.53674e-07, -26), Vector2(9.53674e-07, -22), Vector2(9.53674e-07, -26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xchi5"]
_data = {
"Idle": SubResource("Animation_oc7wn"),
"RESET": SubResource("Animation_aw3kp"),
"primary_attack": SubResource("Animation_snqyk"),
"secondary_attack": SubResource("Animation_cw0qp"),
"secondary_attack_charge": SubResource("Animation_1t1fr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm2xp"]
size = Vector2(120, 19)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_nn1ov")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Marker2D"]
position = Vector2(10, 0)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_jygr1")
animation = &"Idle"

[node name="ShootingPoint" type="Marker2D" parent="Marker2D/AnimatedSprite2D"]
unique_name_in_owner = true
position = Vector2(-3.8147e-06, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Marker2D/AnimatedSprite2D"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_xchi5")
}

[node name="hitbox" type="Area2D" parent="Marker2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Marker2D/AnimatedSprite2D/hitbox"]
position = Vector2(-3.99999, 2.50001)
shape = SubResource("RectangleShape2D_cm2xp")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[connection signal="area_entered" from="Marker2D/AnimatedSprite2D/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
